# 2025-nov-22-falai-hackathon

./: .gitignore  AGENTS.md  DEVELOP.md  FUTURE_IMPROVEMENTS.md  README.md  classes_defects.txt  product_plan.md  technical_spec_fal.md
anomaly_detection/: .env.example  README.md  client.html  download_dataset.py  main.py  pyproject.toml  run_server.sh  server.py  test_client.py
docs/: blueprint_analysis_summary.md  blueprint_plan_revised.md
docs/features/: blueprint_creation.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/analyze-defects/: route.ts
frontend/src/app/api/blueprints/[blueprintId]/: route.ts
frontend/src/app/api/blueprints/[blueprintId]/poll/: route.ts
frontend/src/app/api/generate-text-to-image/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/blueprint-builder/: page.tsx
frontend/src/app/blueprints/new/: page.tsx
frontend/src/app/fal-generator/: page.tsx
frontend/src/app/projects/[projectId]/blueprints/[blueprintId]/: page.tsx
frontend/src/components/blueprint-builder/: BlueprintBuilder.tsx  DefectEditor.tsx
frontend/src/components/blueprint-builder/steps/: FinalStep.tsx  OntologyStep.tsx  ReviewStep.tsx  UploadStep.tsx
frontend/src/components/fal-generator/: FalGenerator.tsx  SchemaForm.tsx
frontend/src/components/ui/: button.tsx  toast.tsx
frontend/src/hooks/: useToast.ts
frontend/src/lib/: blueprintStorage.ts  claude.ts  fal.ts  schema.ts  storage.ts
(+3 files in other folders)
